<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".ui.UbicarActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4sp"
        android:layout_marginEnd="4sp"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary"
        app:cardCornerRadius="10sp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlFondo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="6dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guidelineLA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.34" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilCartonGenericoRC"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="4sp"
                        android:hint="@string/hint_etCartonGenerico"
                        android:textColorHint="@color/opaco"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:boxBackgroundColor="@color/opaco"
                        app:counterTextColor="@color/white"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconDrawable="@drawable/vector_camara">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etCartonGenericoRC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:backgroundTint="@color/white"
                            android:ems="10"
                            android:imeOptions="actionSearch"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textColorHint="@color/white"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="@+id/tilUsuario"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/tilUsuario" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilPosicionRC"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4sp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="4sp"
                        android:hint="@string/hint_etUbicacion"
                        android:textColorHint="@color/opaco"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:counterTextColor="@color/white"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tilCartonGenericoRC"
                        app:startIconDrawable="@drawable/vector_posicion">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPosicionRC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:backgroundTint="@color/white"
                            android:ems="10"
                            android:imeOptions="actionSearch"
                            android:enabled="false"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textColorHint="@color/white"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="@+id/tilPosicionRC"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/tilPosicionRC" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tvTituloPedidoRC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/txt_TituloPedidoRC"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tilPosicionRC" />

                    <TextView
                        android:id="@+id/tvPedidoRCV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        android:text="@string/txt_PedidoRC"
                        android:textSize="17sp"
                        app:layout_constraintBottom_toBottomOf="@+id/tvTituloPedidoRC"
                        app:layout_constraintStart_toStartOf="@+id/guidelineLA"
                        app:layout_constraintTop_toTopOf="@+id/tvTituloPedidoRC" />

                    <TextView
                        android:id="@+id/tvTituloTiendaRC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/txt_TituloTiendaRC"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvTituloPedidoRC" />

                    <TextView
                        android:id="@+id/tvTiendaRCV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        android:text="@string/txt_TiendaRC"
                        android:textSize="17sp"
                        app:layout_constraintBottom_toBottomOf="@+id/tvTituloTiendaRC"
                        app:layout_constraintStart_toStartOf="@+id/guidelineLA"
                        app:layout_constraintTop_toTopOf="@+id/tvTituloTiendaRC" />

                    <TextView
                        android:id="@+id/tvTituloPosicionRC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/txt_TituloUbicacionRC"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvTituloTiendaRC" />

                    <TextView
                        android:id="@+id/tvPosicionRC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        android:text="@string/txt_UbicacionRC"
                        android:textSize="17sp"
                        app:layout_constraintBottom_toBottomOf="@+id/tvTituloPosicionRC"
                        app:layout_constraintStart_toStartOf="@+id/guidelineLA"
                        app:layout_constraintTop_toTopOf="@+id/tvTituloPosicionRC" />

                    <TextView
                        android:id="@+id/tvTituloTotalesRC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/txt_TituloTotalesRC"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/btnTerminarCarton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvTituloPosicionRC" />

                    <TextView
                        android:id="@+id/tvTotalesRCV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        android:text="@string/txt_TotalesRC"
                        android:textSize="17sp"
                        app:layout_constraintBottom_toBottomOf="@+id/tvTituloTotalesRC"
                        app:layout_constraintStart_toStartOf="@+id/guidelineLA"
                        app:layout_constraintTop_toTopOf="@+id/tvTituloTotalesRC" />

                    <Button
                        android:id="@+id/btnTerminarCarton"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="4sp"
                        android:layout_marginEnd="4sp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/txt_btnTerminarCarton"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/pbRecibirCaja"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:indeterminateDrawable="@drawable/progressbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv" />

</androidx.constraintlayout.widget.ConstraintLayout>