<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="4sp"
    app:cardElevation="0dp"
    app:cardMaxElevation="0dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@color/black"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlFondo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constConfirmarCerrado"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvNumeroConfirmarCerrarP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:textStyle="bold"
                    android:text="@string/txt_tvNumeroConfirmarCerrarP"
                    android:textColor="@color/azul"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvEanConfirmarCerrarP"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/txt_tvEanConfirmarCerrarP"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tvNumeroConfirmarCerrarP"
                    app:layout_constraintEnd_toStartOf="@+id/tvCantidadConfirmarCerrarP"
                    app:layout_constraintStart_toEndOf="@+id/tvNumeroConfirmarCerrarP"
                    app:layout_constraintTop_toTopOf="@+id/tvNumeroConfirmarCerrarP"
                    />

                <TextView
                    android:id="@+id/tvCantidadConfirmarCerrarP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/txt_tvCantidadConfirmarCerrarP"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/tvTamano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginRight="6dp"
                    android:text="Tamaño"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>