<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".ui.EmpacarActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary"
        android:layout_marginStart="4sp"
        android:layout_marginEnd="4sp"
        app:cardCornerRadius="10sp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlFondo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="6dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilPosicionCP"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4sp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="4sp"
                        android:hint="@string/txt_UbicacionRC"
                        android:textColorHint="@color/opaco"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:counterTextColor="@color/white"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconDrawable="@drawable/vector_posicion">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPosicionCP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:backgroundTint="@color/white"
                            android:ems="10"
                            android:imeOptions="actionSearch"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textColorHint="@color/white"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="@+id/tilUsuario"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/tilUsuario" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnEmpezarCerradoCP"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="4sp"
                        android:layout_marginEnd="4sp"
                        android:layout_marginTop="2sp"
                        android:text="@string/txt_btnEmpezarCerrado"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tilPosicionCP" />

                    <Button
                        android:id="@+id/btnEmpezarEmpaqueRFID"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="4sp"
                        android:layout_marginEnd="4sp"
                        android:layout_marginTop="2sp"
                        android:text="@string/txt_btnEmpezarEmpaqueRFID"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnEmpezarCerradoCP" />

                    <Button
                        android:id="@+id/btnFinalizarPosicionCP"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:textSize="20sp"
                        android:layout_marginStart="4sp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="4sp"
                        android:layout_marginBottom="10sp"
                        android:text="@string/txt_btnFinalizarPosicion"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnEmpezarEmpaqueRFID" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>